Fix z-index issue of the token logo

--- a/src/components/screens/wallet/overview/accountInfo/accountInfo.css
+++ b/src/components/screens/wallet/overview/accountInfo/accountInfo.css
@@ -24,6 +24,8 @@
   & .info {
     display: flex;
     flex-flow: row nowrap;
+    position: relative;
+    z-index: 1;
 
     & .text {
       position: relative;
